--- a/Npf/index.html
+++ b/Npf/index.html
@@ -4,24 +4,25 @@
     <meta property="og:title" content="Npflio" />
     <meta
       property="og:image"
-      content="https://biggymarley.github.io/Npf/Npf/img/profile.jpeg"
+      content="https://biggymarley.github.ioimg/profile.jpeg"
     />
     <meta
       property="og:description"
       content="I'm a student from 1337, a pretty cool computer science school from the 42 Network located in Khouribga, Morocco. I've always been drawn to the overlap between design and development. My skills are broad: from ux to design, front end to back end development. Architecture matters to me. Things have to stay clean and simple, and with this in mind I take time creating modules and boilerplates, trying to bring some purity in my work. I'm available for remote work - if you would like to build something together, get in touch?"
     />
-    <meta property="og:url" content="https://biggymarley.github.io/Npf/Npf/#Home" />
+    <meta property="og:url" content="https://biggymarley.github.io#Home" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="height=device-height, initial-scale=1.0" />
     <title>Npflio</title>
-    <link rel="stylesheet" href="/Npf/Npf/css/index.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/header.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/dark.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/darkmode-buttom.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/fullpage.min.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/glass.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/sections.css" />
-    <link rel="stylesheet" href="/Npf/Npf/css/media.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/dark.css" />
+    <link rel="stylesheet" href="css/darkmode-buttom.css" />
+    <link rel="stylesheet" href="css/fullpage.min.css" />
+    <link rel="stylesheet" href="css/glass.css" />
+    <link rel="stylesheet" href="css/sections.css" />
+    <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/Loading.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
       rel="stylesheet"
@@ -39,8 +40,15 @@
   </head>
   <body class="body">
     <div class="loading">
-      Loading ... 
+      <div class="welcom">
+        <h1 class="ml12"></h1>
+        <section class="obj">
+          <div class="lobj"></div>
+          <div class="lobj2"></div>
+        </section>
+      </div>
     </div>
+    <div class="web">
     <!-- HEADER -->
     <header class="header">
       <nav class="nav-bar">
@@ -66,7 +74,7 @@
           </li>
         </ul>
         <button class="menu-button">
-          <img class="menu-img" src="/Npf/Npf/img/lmenu.svg" />
+          <img class="menu-img" src="img/lmenu.svg" />
         </button>
       </nav>
     </header>
@@ -118,7 +126,7 @@
                 <a class="project" href="https://github.com/biggymarley/camagru"
                   >Camagru
                   <br />
-                  <img class="projectimg" src="/Npf/Npf/img/web.svg"
+                  <img class="projectimg" src="img/web.svg"
                 /></a>
               </section>
               <p>
@@ -129,13 +137,13 @@
 
               <div class="languages">
                 <section class="type">
-                  <img class="projectimg tst" src="/Npf/Npf/img/php.svg" />
-                  <img class="projectimg tst" src="/Npf/Npf/img/mysql.svg" />
+                  <img class="projectimg tst" src="img/php.svg" />
+                  <img class="projectimg tst" src="img/mysql.svg" />
                 </section>
                 <section class="type">
-                  <img class="projectimg tst" src="/Npf/Npf/img/html.svg" />
-                  <img class="projectimg tst" src="/Npf/Npf/img/css.svg" />
-                  <img class="projectimg tst" src="/Npf/Npf/img/js.svg" />
+                  <img class="projectimg tst" src="img/html.svg" />
+                  <img class="projectimg tst" src="img/css.svg" />
+                  <img class="projectimg tst" src="img/js.svg" />
                 </section>
               </div>
             </div>
@@ -147,7 +155,7 @@
                     class="project"
                     href="https://github.com/biggymarley/Minishell_1337"
                     >Minishell<br />
-                    <img class="projectimg" src="/Npf/Npf/img/minishell.svg"
+                    <img class="projectimg" src="img/minishell.svg"
                   /></a>
                 </section>
 
@@ -162,7 +170,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -175,7 +183,7 @@
                     href="https://github.com/biggymarley/ls_1337"
                     >Ls : /bin/ls<br /><img
                       class="projectimg"
-                      src="/Npf/Npf/img/minishell.svg"
+                      src="img/minishell.svg"
                   /></a>
                 </section>
                 <p>
@@ -185,7 +193,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -198,7 +206,7 @@
                     href="https://github.com/biggymarley/shell-21sh"
                     >21SH<br /><img
                       class="projectimg"
-                      src="/Npf/Npf/img/minishell.svg"
+                      src="img/minishell.svg"
                   /></a>
                 </section>
 
@@ -212,7 +220,7 @@
                 </p>
                 <div class="languages inside">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/Npf/img/c.svg" />
+                    <img class="projectimg tst" src="img/c.svg" />
                   </section>
                 </div>
               </div>
@@ -225,7 +233,7 @@
                     href="https://github.com/biggymarley/Piscine-php"
                     >Piscine PHP<br /><img
                       class="projectimg"
-                      src="/Npf/Npf/img/web.svg"
+                      src="img/web.svg"
                   /></a>
                 </section>
                 <p>
@@ -233,12 +241,12 @@
                 </p>
                 <div class="languages">
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/Npf/img/php.svg" />
-                    <img class="projectimg tst" src="/Npf/Npf/img/mysql.svg" />
+                    <img class="projectimg tst" src="img/php.svg" />
+                    <img class="projectimg tst" src="img/mysql.svg" />
                   </section>
                   <section class="type">
-                    <img class="projectimg tst" src="/Npf/Npf/img/html.svg" />
-                    <img class="projectimg tst" src="/Npf/Npf/img/css.svg" />
+                    <img class="projectimg tst" src="img/html.svg" />
+                    <img class="projectimg tst" src="img/css.svg" />
                   </section>
                 </div>
               </div>
@@ -255,7 +263,7 @@
               <h1 class="shadow">Contact Me</h1>
             </div>
             <a href="https://www.linkedin.com/in/afaragi">
-              <img class="profile" src="/Npf/Npf/img/profile.jpeg" />
+              <img class="profile" src="img/profile.jpeg" />
             </a>
             <div class="shadoweffect">
               <section class="contact up">
@@ -279,24 +287,14 @@
         </div>
       </section>
     </div>
-    <script type="text/javascript">
-
-    const loading = document.querySelector('.loading');
-    const body = document.querySelector('.body');
-
-    window.addEventListener("load", () => {
-      setTimeout(() => {
-        body.style.opacity = 1;
-        body.style.background = "";
-        loading.style.display = "none";
-      }, 4000)
-    });
-    </script>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="js/Loading.js"></script>
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
-    <script src="/Npf/Npf/js/fullpage.min.js"></script>
-    <script src="/Npf/Npf/js/fullpage.extensions.min.js"></script>
-    <script src="/Npf/Npf/js/index.js"></script>
-    <script src="/Npf/Npf/js/sliderdark.js"></script>
+    <script src="js/fullpage.min.js"></script>
+    <script src="js/fullpage.extensions.min.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/sliderdark.js"></script>
   </body>
  
 </html>
