--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body class="body">
     <div class="loading">
       <div class="welcom">
-        <h1 class="ml12"></h1>
+        <h1 class="ml12">Faragi Ayoub</h1>
         <section class="obj">
           <div class="lobj"></div>
           <div class="lobj2"></div>
