--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             </a>
           </li>
           <li class="item-project">
+            <a href="https://drive.google.com/file/d/1y4D0MnatSUq_rALfsvRmeI_zHBnqjK2n/view?usp=sharing">
+              <h4 class="active-span">CV</h4>
+            </a>
+          </li>
+          <li class="item-project">
             <a href="#Cme">
               <h4 class="active-span">Contact Me</h4>
             </a>
@@ -209,7 +214,6 @@
                       src="img/minishell.svg"
                   /></a>
                 </section>
-
                 <p>
                   Thanks to the Minishell project, you discovered a part of what
                   is behind the scene of a shell, such as the one you use
@@ -217,6 +221,27 @@
                   creation with functions like fork and wait. The 21sh project
                   will make you go further by adding, amoungst other things,
                   interprocess communication using pipes.
+                </p>
+                <div class="languages inside">
+                  <section class="type">
+                    <img class="projectimg tst" src="img/c.svg" />
+                  </section>
+                </div>
+              </div>
+            </section>
+            <section class="slide">
+              <div class="projects">
+                <section class="link-and-line tool">
+                  <a
+                    class="project"
+                    href="https://github.com/biggymarley/shell-21sh"
+                    >42SH<br /><img
+                      class="projectimg"
+                      src="img/minishell.svg"
+                  /></a>
+                </section>
+                <p>
+                  This project is about writing the most stable and most complete UNIX shell possible
                 </p>
                 <div class="languages inside">
                   <section class="type">
