add cv to responsive

--- a/index.html
+++ b/index.html
@@ -86,12 +86,17 @@
     <div class="hidden-menu" data-checker="off">
       <li class="darkbutton-countainer">
         <a href="#Ps">
-          <h3 class="active-span click">Projects</h3>
+          <h4 class="active-span click">Projects</h3>
+        </a>
+      </li>
+      <li class="darkbutton-countainer">
+        <a href="https://drive.google.com/file/d/1y4D0MnatSUq_rALfsvRmeI_zHBnqjK2n/view?usp=sharing">
+          <h4 class="active-span">CV</h4>
         </a>
       </li>
       <li class="darkbutton-countainer">
         <a href="#Cme">
-          <h3 class="active-span click">Contact me</h3>
+          <h4 class="active-span click">Contact me</h3>
         </a>
       </li>
       <li class="darkbutton-countainer">
