add cv to responsive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta property="og:title" content="Npflio" />
     <meta
       property="og:image"
-      content="https://biggymarley.github.ioimg/profile.jpeg"
+      content="https://biggymarley.github.io/Npf/img/profile.jpeg"
     />
     <meta
       property="og:description"
@@ -105,7 +105,6 @@
       </li>
     </div>
     <!-- /HEADER -->
-
     <div id="fullpage">
       <section class="section s1">
         <div class="cent">
@@ -157,7 +156,6 @@
                 </section>
               </div>
             </div>
-
             <section class="slide s2">
               <div class="projects">
                 <section class="link-and-line tool">
@@ -168,7 +166,6 @@
                     <img class="projectimg" src="img/minishell.svg"
                   /></a>
                 </section>
-
                 <p>
                   First step in the creation of a shell. In this project, this
                   mini-shell capable of reading and evaluating simple user
