--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </a>
           </li>
           <li class="item-project">
-            <a href="https://drive.google.com/file/d/1y4D0MnatSUq_rALfsvRmeI_zHBnqjK2n/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/1y4D0MnatSUq_rALfsvRmeI_zHBnqjK2n/view?usp=sharing" target="other">
               <h4 class="active-span">CV</h4>
             </a>
           </li>
