--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
             <h1 class="intro">Hey, my name is Ayoub FARAGI</h1>
             <h1 class="intro">I am a Full stack Engineer</h1>
             <br />
-            <h1 class="intro">- I'm a Fullstack Developer & Designer.</h1>
+            <br />
+            <!-- <h1 class="intro">- I'm a Fullstack Developer & Designer.</h1> -->
             <p>
               I'm a student from 1337, a pretty cool computer science school
               from the 42 Network located in Khouribga, Morocco. I've always
@@ -320,6 +321,8 @@
     <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
     <script src="js/fullpage.min.js"></script>
     <script src="js/fullpage.extensions.min.js"></script>
+    <script src="js/three.r119.min.js"></script>
+    <script src="js/vanta.clouds.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/sliderdark.js"></script>
   </body>
