--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/sections.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link rel="stylesheet" href="css/Loading.css" />
+    <link rel="stylesheet" href="css/starts.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap"
       rel="stylesheet"
@@ -34,8 +35,8 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+    rel="stylesheet"
     />
   </head>
   <body class="body">
@@ -49,15 +50,16 @@
       </div>
     </div>
     <div class="web">
-    <!-- HEADER -->
-    <header class="header">
-      <nav class="nav-bar">
-        <section class="logo">
-          <a href="#Home">
-            <h3 id="logoname">FARAGI Ayoub</h3>
-          </a>
-        </section>
-        <ul id="menu" class="onheader header-items">
+      <div class="stars"></div>
+      <!-- HEADER -->
+      <header class="header">
+        <nav class="nav-bar">
+          <section class="logo">
+            <a href="#Home">
+              <h3 id="logoname">FARAGI Ayoub</h3>
+            </a>
+          </section>
+          <ul id="menu" class="onheader header-items">
           <li class="item-project">
             <a href="#Ps">
               <h4 class="active-span">Projects</h4>
@@ -87,37 +89,36 @@
       <li class="darkbutton-countainer">
         <a href="#Ps">
           <h4 class="active-span click">Projects</h3>
-        </a>
-      </li>
-      <li class="darkbutton-countainer">
-        <a href="https://drive.google.com/file/d/1NlAXcNUyapBcr8fDnPPn7pmZM9BNzEex/view?usp=sharing">
-          <h4 class="active-span">CV</h4>
-        </a>
-      </li>
-      <li class="darkbutton-countainer">
-        <a href="#Cme">
-          <h4 class="active-span click">Contact me</h3>
-        </a>
-      </li>
-      <li class="darkbutton-countainer">
-        <input type="checkbox" class="toggle" value="Dark" />
-        <div class="ball"></div>
-      </li>
-    </div>
-    <!-- /HEADER -->
-    <div id="fullpage">
-      <section class="section s1">
-        <div class="cent">
-          <div class="container">
-            <h1 class="intro">Hey, my name is Ayoub FARAGI</h1>
-            <h1 class="intro">I am a Full stack Engineer</h1>
-            <br />
-            <br />
-            <!-- <h1 class="intro">- I'm a Fullstack Developer & Designer.</h1> -->
-            <p>
-              I'm a student from 1337, a pretty cool computer science school
-              from the 42 Network located in Khouribga, Morocco. I've always
-              been drawn to the overlap between design and development. My
+          </a>
+        </li>
+        <li class="darkbutton-countainer">
+          <a href="https://drive.google.com/file/d/1NlAXcNUyapBcr8fDnPPn7pmZM9BNzEex/view?usp=sharing">
+            <h4 class="active-span">CV</h4>
+          </a>
+        </li>
+        <li class="darkbutton-countainer">
+          <a href="#Cme">
+            <h4 class="active-span click">Contact me</h3>
+            </a>
+          </li>
+          <li class="darkbutton-countainer">
+            <input type="checkbox" class="toggle" value="Dark" />
+            <div class="ball"></div>
+          </li>
+        </div>
+        <!-- /HEADER -->
+        <div id="fullpage">
+          <section class="section s1">
+            <div class="cent">
+              <div class="container">
+                <h1 class="intro">Hey, my name is Ayoub FARAGI</h1>
+                <h1 class="intro">I am a Full stack Engineer</h1>
+                <br />
+                <br />
+                <p>
+                  I'm a student from 1337, a pretty cool computer science school
+                  from the 42 Network located in Khouribga, Morocco. I've always
+                  been drawn to the overlap between design and development. My
               skills are broad: from ux to design, front end to back end
               development. Architecture matters to me. Things have to stay clean
               and simple, and with this in mind I take time creating modules and
