--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li class="item-project">
-            <a href="https://drive.google.com/file/d/1NlAXcNUyapBcr8fDnPPn7pmZM9BNzEex/view?usp=sharing" target="other">
+            <a href="https://biggymarley.github.io/CV/" target="other">
               <h4 class="active-span">CV</h4>
             </a>
           </li>
